--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,3 +7,4 @@
 @import "./media-queries.css";
 @import "./page-grid.css";
 @import "./accordion/accordion.css";
+@import "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css";
