--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,5 +8,7 @@
 @import "./media-queries.css";
 @import "./page-grid.css";
 @import "./_page/page.css";
+@import "./_brand/brand.css";
 @import "./bottom-drawer/bottom-drawer.css";
+@import "./side-nav/side-nav.css";
 @import "./accordion/accordion.css";
