--- a/src/styles/_page/page.css
+++ b/src/styles/_page/page.css
@@ -20,7 +20,6 @@
     grid-template-columns: 1fr;
     grid-template-rows:
       var(--top-nav-height) 
-      auto
       calc(
         var(--page-height) - var(--top-nav-height) - var(--bottom-nav-height)
       )
@@ -28,7 +27,6 @@
     grid-template-areas:
       "header"
       "content"
-      "dialog"
       "footer";
     margin: 0;
     position:relative;
@@ -40,9 +38,7 @@
     flex-direction:column;
     perspective: 1000px;
     perspective-origin: top;
-    margin-bottom:      calc(
-      (var(--page-height) - var(--top-nav-height) - var(--bottom-nav-height)) * -1
-    )
+    overflow-y:auto;
   }
 
 
